Fix some styling on mobile

--- a/client/src/css/game-board.css
+++ b/client/src/css/game-board.css
@@ -77,7 +77,7 @@
     font-size: 0.925rem;
     &:hover {
         background-color: #058f8c;
-        transition: ease-in-out .35s;
+        transition: ease-in-out 200ms;
     }
     &:focus, &:focus-visible {
         background-color: var(--secondary-blue);
