--- a/client/src/css/join-room.css
+++ b/client/src/css/join-room.css
@@ -1,13 +1,24 @@
 .container-create-btn {
-    max-width: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
+    @media screen and (min-width: 640px) {
+        & > * {
+            max-width:  193px;
+        }
+    }
 
     label {
         margin-left: 8px;
     }
-    .text-small {
-        max-width: 193px;
+
+    .confirmation-text {
         margin-bottom: 8px;
+    }
+}
+
+.button-section {
+    @media screen and (max-width: 640px) {
+        flex-direction: column-reverse;
     }
 }
